--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@ body {
 	  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
   </style>
+<!-- ############  analytic ########### -->
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "fgkz6kd6fd");
+</script>
+<!-- ############  analytic ########### -->	  
   </head>
   <body class="bg-books">
 	  <!-- Hero -->
