--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ body {
 								<a href="./c_language_1/">											
 								<div class="card-image ">
 									<figure class="image is-5by4">										
-										<img src="https://images-assets.nasa.gov/image/carina_nebula/carina_nebula~medium.jpg"/>										
+										<img src="./c_language_1/img/C_1_cover.png"/>										
 									</figure>  
 								</div>
 								<div class="card-content is-overlay">
@@ -108,7 +108,7 @@ body {
 	   <div class="columns">
 		<div class="column"></div>
 		<div class="column">
-			<div class="content has-text-centered box">
+			<div class="content has-text-centered">
 				<p>
 					<strong></strong> By <a href="mailto:somchaisomph@gmail.com">สมชาย สมผดุง</a>. 
 				</p>
