--- a/bookshelf/index.html
+++ b/bookshelf/index.html
@@ -104,7 +104,7 @@
 			BookShelf
 		</h1>
         <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-gray-400">
-			Here at Flowbite we focus on markets where technology, innovation, and capital can unlock long-term value and drive economic growth.
+			Learn every day where technology, innovation, and capital can unlock long-term value and drive your growth.
 		</p>
 		<br/>
 		<div class="grid grid-cols-4 grid-rows-3 grid-flow-row gap-4 
