--- a/bookshelf/index.html
+++ b/bookshelf/index.html
@@ -95,6 +95,15 @@
   }
 }
   </script>
+	    <!-- analytics -->
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "iw4ds5e91i");
+</script>	    
+	    <!-- analytics -->
     </head>
 <body >      
 	<section class="bg-white dark:bg-gray-900 bg-center background-size: cover;" 
