--- a/bookshelf/index.html
+++ b/bookshelf/index.html
@@ -119,7 +119,7 @@
 		<div class="grid grid-cols-4 grid-rows-3 grid-flow-row gap-4 
 			px-4 mx-auto text-center md:max-w-screen-md lg:max-w-screen-lg lg:px-36">
 			<div class="book">
-				<a href="../let-code-cg-1/cover.html" >
+				<a href="../let-code-cg-1/" >
 					<img src="./images/let-code-graphics-255x350.png" alt="Let code graphics Raspberry Pi" />
 				</a>
 			</div>
