--- a/let-code-cg-1/basic-shapes/ellipse_raylib.html
+++ b/let-code-cg-1/basic-shapes/ellipse_raylib.html
@@ -3,8 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Page not found - Let&#x27;s Code Graphics on Raspberry Pi</title>
-        <base href="/">
+        <title>วาดวงรีด้วย raylib  - Let&#x27;s Code Graphics on Raspberry Pi</title>
 
 
         <!-- Custom HTML head -->
@@ -13,27 +12,27 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
 
-        <link rel="icon" href="favicon.svg">
-        <link rel="shortcut icon" href="favicon.png">
-        <link rel="stylesheet" href="css/variables.css">
-        <link rel="stylesheet" href="css/general.css">
-        <link rel="stylesheet" href="css/chrome.css">
-        <link rel="stylesheet" href="css/print.css" media="print">
+        <link rel="icon" href="../favicon.svg">
+        <link rel="shortcut icon" href="../favicon.png">
+        <link rel="stylesheet" href="../css/variables.css">
+        <link rel="stylesheet" href="../css/general.css">
+        <link rel="stylesheet" href="../css/chrome.css">
+        <link rel="stylesheet" href="../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="fonts/fonts.css">
+        <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="highlight.css">
-        <link rel="stylesheet" href="tomorrow-night.css">
-        <link rel="stylesheet" href="ayu-highlight.css">
+        <link rel="stylesheet" href="../highlight.css">
+        <link rel="stylesheet" href="../tomorrow-night.css">
+        <link rel="stylesheet" href="../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
-        <link rel="stylesheet" href="css/watermark.css">
-        <link rel="stylesheet" href="css/openmoji-color-awesome.css">
-        <link rel="stylesheet" href="css/openmoji-black-awesome.css">
-        <link rel="stylesheet" href="css/modal.css">
+        <link rel="stylesheet" href="../css/watermark.css">
+        <link rel="stylesheet" href="../css/openmoji-color-awesome.css">
+        <link rel="stylesheet" href="../css/openmoji-black-awesome.css">
+        <link rel="stylesheet" href="../css/modal.css">
 
         <!-- MathJax -->
         <script async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
@@ -42,7 +41,7 @@
     <div id="body-container">
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "";
+            var path_to_root = "../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "rust";
         </script>
 
@@ -94,7 +93,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item "><a href="cover.html"><strong aria-hidden="true">1.</strong> Cover</a></li><li class="chapter-item "><a href="intro.html"><strong aria-hidden="true">2.</strong> บทนำ</a></li><li class="chapter-item "><a href="basic_idea.html"><strong aria-hidden="true">3.</strong> ความรู้พื้นฐาน</a></li><li class="chapter-item "><a href="install_raylib.html"><strong aria-hidden="true">4.</strong> การติดตั้ง raylib บน Raspberry Pi</a></li><li class="chapter-item "><div><strong aria-hidden="true">5.</strong> เริ่มต้นวาด</div><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="template_cpp.html"><strong aria-hidden="true">5.1.</strong> template.cpp</a></li><li class="chapter-item "><a href="hello_world_window.html"><strong aria-hidden="true">5.2.</strong> HelloWorld Window</a></li><li class="chapter-item "><a href="rgb_window.html"><strong aria-hidden="true">5.3.</strong> RGB Color Space Window</a></li></ol></li><li class="chapter-item "><a href="basic_geometry_shapes.html"><strong aria-hidden="true">6.</strong> รูปร่างเชิงเรขาคณิต (Basic Geometry Shapes)</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="basic-shapes/line.html"><strong aria-hidden="true">6.1.</strong> เส้นตรง</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="basic-shapes/line_naiv.html"><strong aria-hidden="true">6.1.1.</strong> วาดเส้นตรงจากสมการ</a></li><li class="chapter-item "><a href="basic-shapes/line_bresenham.html"><strong aria-hidden="true">6.1.2.</strong> Bresenham's algorithm</a></li><li class="chapter-item "><a href="basic-shapes/line_raylib.html"><strong aria-hidden="true">6.1.3.</strong> วาดเส้นตรงด้วย raylib</a></li></ol></li><li class="chapter-item "><a href="basic-shapes/circle.html"><strong aria-hidden="true">6.2.</strong> วงกลม</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="basic-shapes/circle_naiv.html"><strong aria-hidden="true">6.2.1.</strong> วาดวงกลมจากสมการวงกลม</a></li><li class="chapter-item "><a href="basic-shapes/circle_midpoint.html"><strong aria-hidden="true">6.2.2.</strong> Midpoint circle algorithm</a></li><li class="chapter-item "><a href="basic-shapes/circle_bresenham.html"><strong aria-hidden="true">6.2.3.</strong> Bresenham's algorithm</a></li><li class="chapter-item "><a href="basic-shapes/circle_raylib.html"><strong aria-hidden="true">6.2.4.</strong> วาดวงกลมด้วย raylib </a></li></ol></li><li class="chapter-item "><a href="basic-shapes/ellipse.html"><strong aria-hidden="true">6.3.</strong> วงรี</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="basic-shapes/ellipse_naiv.html"><strong aria-hidden="true">6.3.1.</strong> วาดวงรีจากสมการวงรี</a></li><li class="chapter-item "><a href="basic-shapes/ellipse_midpoint.html"><strong aria-hidden="true">6.3.2.</strong> Midpoint ellipse algorithm</a></li><li class="chapter-item "><a href="basic-shapes/ellipse_raylib.html"><strong aria-hidden="true">6.3.3.</strong> วาดวงรีด้วย raylib </a></li></ol></li><li class="chapter-item "><a href="basic-shapes/polygon.html"><strong aria-hidden="true">6.4.</strong> รูปหลายเหลี่ยม</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="basic-shapes/polygon_raylib.html"><strong aria-hidden="true">6.4.1.</strong> วาดรูปหลายเหลี่ยมด้วย raylib </a></li></ol></li><li class="chapter-item "><a href="basic-shapes/exercise1.html"><strong aria-hidden="true">6.5.</strong> โครงงานที่ 1 : Icecream Cone</a></li></ol></li><li class="chapter-item "><a href="bookshelf.html"><strong aria-hidden="true">7.</strong> กลับสู่ชั้นหนังสือ</a></li></ol>
+                <ol class="chapter"><li class="chapter-item "><a href="../cover.html"><strong aria-hidden="true">1.</strong> Cover</a></li><li class="chapter-item "><a href="../intro.html"><strong aria-hidden="true">2.</strong> บทนำ</a></li><li class="chapter-item "><a href="../basic_idea.html"><strong aria-hidden="true">3.</strong> ความรู้พื้นฐาน</a></li><li class="chapter-item "><a href="../install_raylib.html"><strong aria-hidden="true">4.</strong> การติดตั้ง raylib บน Raspberry Pi</a></li><li class="chapter-item "><div><strong aria-hidden="true">5.</strong> เริ่มต้นวาด</div><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../template_cpp.html"><strong aria-hidden="true">5.1.</strong> template.cpp</a></li><li class="chapter-item "><a href="../hello_world_window.html"><strong aria-hidden="true">5.2.</strong> HelloWorld Window</a></li><li class="chapter-item "><a href="../rgb_window.html"><strong aria-hidden="true">5.3.</strong> RGB Color Space Window</a></li></ol></li><li class="chapter-item expanded "><a href="../basic_geometry_shapes.html"><strong aria-hidden="true">6.</strong> รูปร่างเชิงเรขาคณิต (Basic Geometry Shapes)</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../basic-shapes/line.html"><strong aria-hidden="true">6.1.</strong> เส้นตรง</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../basic-shapes/line_naiv.html"><strong aria-hidden="true">6.1.1.</strong> วาดเส้นตรงจากสมการ</a></li><li class="chapter-item "><a href="../basic-shapes/line_bresenham.html"><strong aria-hidden="true">6.1.2.</strong> Bresenham's algorithm</a></li><li class="chapter-item "><a href="../basic-shapes/line_raylib.html"><strong aria-hidden="true">6.1.3.</strong> วาดเส้นตรงด้วย raylib</a></li></ol></li><li class="chapter-item "><a href="../basic-shapes/circle.html"><strong aria-hidden="true">6.2.</strong> วงกลม</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../basic-shapes/circle_naiv.html"><strong aria-hidden="true">6.2.1.</strong> วาดวงกลมจากสมการวงกลม</a></li><li class="chapter-item "><a href="../basic-shapes/circle_midpoint.html"><strong aria-hidden="true">6.2.2.</strong> Midpoint circle algorithm</a></li><li class="chapter-item "><a href="../basic-shapes/circle_bresenham.html"><strong aria-hidden="true">6.2.3.</strong> Bresenham's algorithm</a></li><li class="chapter-item "><a href="../basic-shapes/circle_raylib.html"><strong aria-hidden="true">6.2.4.</strong> วาดวงกลมด้วย raylib </a></li></ol></li><li class="chapter-item expanded "><a href="../basic-shapes/ellipse.html"><strong aria-hidden="true">6.3.</strong> วงรี</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../basic-shapes/ellipse_naiv.html"><strong aria-hidden="true">6.3.1.</strong> วาดวงรีจากสมการวงรี</a></li><li class="chapter-item "><a href="../basic-shapes/ellipse_midpoint.html"><strong aria-hidden="true">6.3.2.</strong> Midpoint ellipse algorithm</a></li><li class="chapter-item expanded "><a href="../basic-shapes/ellipse_raylib.html" class="active"><strong aria-hidden="true">6.3.3.</strong> วาดวงรีด้วย raylib </a></li></ol></li><li class="chapter-item "><a href="../basic-shapes/polygon.html"><strong aria-hidden="true">6.4.</strong> รูปหลายเหลี่ยม</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="../basic-shapes/polygon_raylib.html"><strong aria-hidden="true">6.4.1.</strong> วาดรูปหลายเหลี่ยมด้วย raylib </a></li></ol></li><li class="chapter-item "><a href="../basic-shapes/exercise1.html"><strong aria-hidden="true">6.5.</strong> โครงงานที่ 1 : Icecream Cone</a></li></ol></li><li class="chapter-item "><a href="../bookshelf.html"><strong aria-hidden="true">7.</strong> กลับสู่ชั้นหนังสือ</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -148,7 +147,7 @@
                     <h1 class="menu-title">Let&#x27;s Code Graphics on Raspberry Pi</h1>
 
                     <div class="right-buttons">
-                        <a href="print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
 
@@ -177,14 +176,52 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="document-not-found-404"><a class="header" href="#document-not-found-404">Document not found (404)</a></h1>
-<p>This URL is invalid, sorry. Please use the navigation bar or search to continue.</p>
+                        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
+<div style="background-image: url('../images/logo-1.png');
+            background-repeat: space;
+            background-position: center;
+            ">
+<h1 id="วาดวงรีดวย-raylib"><a class="header" href="#วาดวงรีดวย-raylib"><span style="color:rgb(61,127,200);">วาดวงรีด้วย raylib </span></a></h1>
+<p>ต่างจากวงกลม raylib มี function ที่ใช้วาดวงรีเพียง 2 function คือ</p>
+<ol>
+<li>วาด filled ellipse </li>
+</ol>
+<pre><code class="language-cpp">void DrawEllipse(int centerX, 
+	int centerY, 
+	float radiusH, 
+	float radiusV, 
+	Color color)
+</code></pre>
+<p>2.วาดเฉพาะเส้นรอบรูป</p>
+<pre><code class="language-cpp"> void DrawEllipseLines(int centerX, 
+	int centerY, 
+	float radiusH, 
+	float radiusV, 
+	Color color)
+</code></pre>
+<!-- end page -->
+</div>
+<br/>
+<hr />
+<footer>
+  <!--Copyright section-->
+  <div>
+    © 2023 Created by :
+    <a href="https://www.facebook.com/groups/699124890456645">Smarter Machine</a>
+  </div>
+</footer>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
+                            <a rel="prev" href="../basic-shapes/ellipse_midpoint.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
 
+                            <a rel="next" href="../basic-shapes/polygon.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -192,7 +229,13 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
+                    <a rel="prev" href="../basic-shapes/ellipse_midpoint.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                        <i class="fa fa-angle-left"></i>
+                    </a>
 
+                    <a rel="next" href="../basic-shapes/polygon.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
@@ -221,17 +264,17 @@
         </script>
 
 
-        <script src="elasticlunr.min.js"></script>
-        <script src="mark.min.js"></script>
-        <script src="searcher.js"></script>
+        <script src="../elasticlunr.min.js"></script>
+        <script src="../mark.min.js"></script>
+        <script src="../searcher.js"></script>
 
-        <script src="clipboard.min.js"></script>
-        <script src="highlight.js"></script>
-        <script src="book.js"></script>
+        <script src="../clipboard.min.js"></script>
+        <script src="../highlight.js"></script>
+        <script src="../book.js"></script>
 
         <!-- Custom JS scripts -->
-        <script src="js/mermaid.min.js"></script>
-        <script src="js/mermaid-init.js"></script>
+        <script src="../js/mermaid.min.js"></script>
+        <script src="../js/mermaid-init.js"></script>
 
 
     </div>
