--- a/let-code-cg-1/bookshelf.html
+++ b/let-code-cg-1/bookshelf.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
-<html lang="en" class="sidebar-visible no-js light">
+<html lang="en" class="sidebar-visible no-js rust">
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>กลับสู่ชั้นหนังสือ - Let&#x27;s code graphics on Raspberry Pi</title>
+        <title>กลับสู่ชั้นหนังสือ - Let&#x27;s Code Graphics on Raspberry Pi</title>
 
 
         <!-- Custom HTML head -->
@@ -32,6 +32,7 @@
         <link rel="stylesheet" href="css/watermark.css">
         <link rel="stylesheet" href="css/openmoji-color-awesome.css">
         <link rel="stylesheet" href="css/openmoji-black-awesome.css">
+        <link rel="stylesheet" href="css/modal.css">
 
         <!-- MathJax -->
         <script async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
@@ -41,7 +42,7 @@
         <!-- Provide site root to javascript -->
         <script>
             var path_to_root = "";
-            var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
+            var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "rust";
         </script>
 
         <!-- Work around some values being stored in localStorage wrapped in quotes -->
@@ -67,7 +68,7 @@
             if (theme === null || theme === undefined) { theme = default_theme; }
             var html = document.querySelector('html');
             html.classList.remove('no-js')
-            html.classList.remove('light')
+            html.classList.remove('rust')
             html.classList.add(theme);
             html.classList.add('js');
         </script>
@@ -92,7 +93,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="cover.html"><strong aria-hidden="true">1.</strong> Cover</a></li><li class="chapter-item expanded "><a href="intro.html"><strong aria-hidden="true">2.</strong> บทนำ</a></li><li class="chapter-item expanded "><a href="basic_idea.html"><strong aria-hidden="true">3.</strong> ความรู้พื้นฐาน</a></li><li class="chapter-item expanded "><a href="install_raylib.html"><strong aria-hidden="true">4.</strong> การติดตั้ง raylib บน Raspberry Pi</a></li><li class="chapter-item expanded "><a href="begin2draw.html"><strong aria-hidden="true">5.</strong> เริ่มต้นด้วย HelloWorld</a></li><li class="chapter-item expanded "><a href="bookshelf.html" class="active"><strong aria-hidden="true">6.</strong> กลับสู่ชั้นหนังสือ</a></li></ol>
+                <ol class="chapter"><li class="chapter-item "><a href="cover.html"><strong aria-hidden="true">1.</strong> Cover</a></li><li class="chapter-item "><a href="intro.html"><strong aria-hidden="true">2.</strong> บทนำ</a></li><li class="chapter-item "><a href="basic_idea.html"><strong aria-hidden="true">3.</strong> ความรู้พื้นฐาน</a></li><li class="chapter-item "><a href="install_raylib.html"><strong aria-hidden="true">4.</strong> การติดตั้ง raylib บน Raspberry Pi</a></li><li class="chapter-item "><div><strong aria-hidden="true">5.</strong> เริ่มต้นวาด</div><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="template_cpp.html"><strong aria-hidden="true">5.1.</strong> template.cpp</a></li><li class="chapter-item "><a href="hello_world_window.html"><strong aria-hidden="true">5.2.</strong> HelloWorld Window</a></li><li class="chapter-item "><a href="rgb_window.html"><strong aria-hidden="true">5.3.</strong> RGB Color Space Window</a></li></ol></li><li class="chapter-item "><a href="basic_geometry_shapes.html"><strong aria-hidden="true">6.</strong> รูปร่างเชิงเรขาคณิต (Basic Geometry Shapes)</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="basic-shapes/line.html"><strong aria-hidden="true">6.1.</strong> เส้นตรง</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="basic-shapes/line_naiv.html"><strong aria-hidden="true">6.1.1.</strong> วาดเส้นตรงจากสมการ</a></li><li class="chapter-item "><a href="basic-shapes/line_bresenham.html"><strong aria-hidden="true">6.1.2.</strong> Bresenham's algorithm</a></li><li class="chapter-item "><a href="basic-shapes/line_raylib.html"><strong aria-hidden="true">6.1.3.</strong> วาดเส้นตรงด้วย raylib</a></li></ol></li><li class="chapter-item "><a href="basic-shapes/circle.html"><strong aria-hidden="true">6.2.</strong> วงกลม</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="basic-shapes/circle_naiv.html"><strong aria-hidden="true">6.2.1.</strong> วาดวงกลมจากสมการวงกลม</a></li><li class="chapter-item "><a href="basic-shapes/circle_midpoint.html"><strong aria-hidden="true">6.2.2.</strong> Midpoint circle algorithm</a></li><li class="chapter-item "><a href="basic-shapes/circle_bresenham.html"><strong aria-hidden="true">6.2.3.</strong> Bresenham's algorithm</a></li><li class="chapter-item "><a href="basic-shapes/circle_raylib.html"><strong aria-hidden="true">6.2.4.</strong> วาดวงกลมด้วย raylib </a></li></ol></li><li class="chapter-item "><a href="basic-shapes/ellipse.html"><strong aria-hidden="true">6.3.</strong> วงรี</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="basic-shapes/ellipse_naiv.html"><strong aria-hidden="true">6.3.1.</strong> วาดวงรีจากสมการวงรี</a></li><li class="chapter-item "><a href="basic-shapes/ellipse_midpoint.html"><strong aria-hidden="true">6.3.2.</strong> Midpoint ellipse algorithm</a></li><li class="chapter-item "><a href="basic-shapes/ellipse_raylib.html"><strong aria-hidden="true">6.3.3.</strong> วาดวงรีด้วย raylib </a></li></ol></li><li class="chapter-item "><a href="basic-shapes/polygon.html"><strong aria-hidden="true">6.4.</strong> รูปหลายเหลี่ยม</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item "><a href="basic-shapes/polygon_raylib.html"><strong aria-hidden="true">6.4.1.</strong> วาดรูปหลายเหลี่ยมด้วย raylib </a></li></ol></li><li class="chapter-item "><a href="basic-shapes/exercise1.html"><strong aria-hidden="true">6.5.</strong> โครงงานที่ 1 : Icecream Cone</a></li></ol></li><li class="chapter-item expanded "><a href="bookshelf.html" class="active"><strong aria-hidden="true">7.</strong> กลับสู่ชั้นหนังสือ</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -143,7 +144,7 @@
                         </button>
                     </div>
 
-                    <h1 class="menu-title">Let&#x27;s code graphics on Raspberry Pi</h1>
+                    <h1 class="menu-title">Let&#x27;s Code Graphics on Raspberry Pi</h1>
 
                     <div class="right-buttons">
                         <a href="print.html" title="Print this book" aria-label="Print this book">
@@ -177,14 +178,14 @@
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.12.0/dist/katex.min.css" integrity="sha384-AfEj0r4/OFrOo5t7NnNe46zW/tFgW6x/bCJG8FqQCEo3+Aro6EYUG4+cU+KJWu/X" crossorigin="anonymous">
 <script>
-window.location="../bookshelf/"
+/*window.location="http://localhost:8000";*/
 </script>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="begin2draw.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="basic-shapes/exercise1.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
@@ -195,7 +196,7 @@ window.location="../bookshelf/"
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="begin2draw.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="basic-shapes/exercise1.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
