--- a/bookshelf/index.html
+++ b/bookshelf/index.html
@@ -116,6 +116,7 @@
 			Learn every day where technology, innovation, and capital can unlock long-term value and drive your growth.
 		</p>
 		<br/>
+	        <!-- a book cover Code graphics on Raspberry Pi -->
 		<div class="grid grid-cols-4 grid-rows-3 grid-flow-row gap-4 
 			px-4 mx-auto text-center md:max-w-screen-md lg:max-w-screen-lg lg:px-36">
 			<div class="book">
@@ -124,6 +125,17 @@
 				</a>
 			</div>
 		</div>
+	        <!-- end of a book cover -->
+	    <!-- a book cover Math for computer graphics-->
+		<div class="grid grid-cols-4 grid-rows-3 grid-flow-row gap-4 
+			px-4 mx-auto text-center md:max-w-screen-md lg:max-w-screen-lg lg:px-36">
+			<div class="book">
+				<a href="../math4compgraph/" >
+					<img src="./images/Mathematice-255x350.png" alt="Math for computer graphics" />
+				</a>
+			</div>
+		</div>
+	        <!-- end of a book cover -->
 		</section>
 		
 		<!--Footer container-->
