--- a/bookshelf/index.html
+++ b/bookshelf/index.html
@@ -117,18 +117,20 @@
 		</p>
 		<br/>
 	        
-		<div class="grid grid-cols-4 grid-rows-3 grid-flow-row gap-4 
+		<div class="grid grid-cols-4 grid-rows-3 grid-flow-row gap-4 continer 
 			px-4 mx-auto text-center md:max-w-screen-md lg:max-w-screen-lg lg:px-36">
 			<!-- a book cover Code graphics on Raspberry Pi -->
 			<div class="book">
 				<a href="../let-code-cg-1/" >
-					<img src="./images/let-code-graphics-255x350.png" alt="Let code graphics Raspberry Pi" />
+					<img src="./images/let-code-graphics-255x350.png" 
+						alt="Let code graphics Raspberry Pi" />
 				</a>
 			</div>
 			<!-- a book cover Math for computer graphics-->
 			<div class="book">
 				<a href="../math4compgraph/" >
-					<img src="./images/Mathematice-255x350.png" alt="Math for computer graphics" />
+					<img src="./images/Mathematice-255x350.png" 
+						alt="Math for computer graphics" />
 				</a>
 			</div>
 		</div>
