--- a/bookshelf/index.html
+++ b/bookshelf/index.html
@@ -30,8 +30,10 @@
 		/>
 		<style>
 		.book{
-			width: 225px;
-			height: 350px;
+			width: 170px;
+			height: 260px;
+			border: thick double #32a1ce;
+			
 		}
 		
 		.book:hover{
